add prettier and eslint

--- a/.env.sample
+++ b/.env.sample
@@ -1,5 +1,12 @@
+# Port number for the server run 
 PORT = 3000
+
+# Mongo db URI localhost 
 MONGODB_URI =mongodb://127.0.0.1:27017
+
+# DB Name 
 DB_NAME =equity_bharat
+
+# Secret Key for JWT (json web token)
 SECREST_KEY = your-very-secret-key
 SECRET_KEY_EXPIRE = 12h  
