--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "node --watch src/index.js",
+    "start": "node src/index.js",
+    "dev": "node --watch src/index.js",
     "lint": "eslint src"
   },
   "keywords": [],
