--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "node src/index.js",
     "dev": "node --watch src/index.js",
-    "lint": "eslint src"
+    "lint": "eslint src",
+    "build": "parcel build src/index.js"
   },
   "keywords": [],
   "author": "",
@@ -14,6 +15,7 @@
   "description": "",
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "body-parser": "^1.20.2",
     "cookie-parser": "^1.4.6",
     "express": "^4.19.2",
     "joi": "^17.13.3",
@@ -22,6 +24,7 @@
   },
   "devDependencies": {
     "eslint": "^9.6.0",
-    "prettier": "^3.3.2"
+    "parcel": "^2.12.0",
+    "prettier": "^3.3.3"
   }
 }
