--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "node src/index.js",
     "dev": "node --watch src/index.js",
     "lint": "eslint src",
-    "build": "parcel build src/index.js"
+    "build": "parcel build src/index.js",
+    "prod": "node index.js"
   },
   "keywords": [],
   "author": "",
